HelloUltraviolet/Fixtures/AcceptedProjects/VerificationFactPrecondition/Source/Library.uv
//! Accepted verification-fact specimen for precondition discharge from branch facts.

public procedure valueRequiresPositive(value: i32) -> i32
|: value > 0
{
    return value
}

public procedure verificationFactPreconditionReference(value: i32) -> bool {
    if value > 0 {
        return valueRequiresPositive(value) == value
    }

    return true
}
