HelloUltraviolet/Fixtures/RejectedSource/Patterns/ExhaustivenessAndReachabilityDiagnostic/Source/Main.uv
//! Rejected pattern specimen for exhaustiveness and reachability diagnostics.

public procedure exhaustivenessAndReachabilityDiagnosticReference() -> i32 {
    let value: i32 = 1
    return if value is {
        _ {
            1
        }
        1 {
            2
        }
    }
}
